TEST_PROGRAMS/INVALID/03/invalid_funcdecl3.go
package main
func f(a int, b int, c string, d int) {
	return
}
func f() {}

func f(a, b, c string, d int) string {
	return c
}
func f(a) {
	return
}
